syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Connectors.Grpc.Protos";

package connectors;

service ConnectorsGrpc {
  // Get connector by id
  rpc GetById (GetConnectorByIdGrpcRequest) returns (ConnectorGrpcResponse);
  rpc GetByChargePointId (GetConnectorByChargePointIdGrpcRequest) returns (ConnectorGrpcResponse);
  rpc GetByChargePointsIds (GetConnectorsByChargePointsIdsGrpcRequest) returns (ConnectorGrpcResponses);
  rpc UpdateConnectorStatus (UpdateConnectorStatusGrpcRequest) returns (google.protobuf.Empty);
  rpc GetOrCreateConnector (GetOrCreateConnectorGrpcRequest) returns (ConnectorGrpcResponse);
}

message GetOrCreateConnectorGrpcRequest {
  string charge_point_id = 1;
  int32 connector_id = 2;
}

message UpdateConnectorStatusGrpcRequest {
  string charge_point_id = 1;
  int32 connector_id = 2;
  google.protobuf.StringValue status = 3;
  google.protobuf.Timestamp status_timestamp = 4;
  google.protobuf.StringValue error_code = 5;
  google.protobuf.StringValue info = 6;
  google.protobuf.StringValue vendor_error_code = 7;
  google.protobuf.StringValue vendor_id = 8;
}

message GetConnectorByChargePointIdGrpcRequest {
  string charge_point_id = 1;
  int32 connector_id = 2;
}

message GetConnectorsByChargePointsIdsGrpcRequest {
  repeated string charge_points_ids = 1;
}

// The request message containing the id of the connector.
message GetConnectorByIdGrpcRequest {
  string id = 1;
}

message ConnectorGrpcResponses {
  repeated ConnectorGrpcResponse connectors = 1;
}

// The response message containing the connector info.
message ConnectorGrpcResponse {
  string id = 1;
  string charge_point_id = 2;
  int32 connector_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  ConnectorStatusGrpcResponse current_status = 6;
}

message ConnectorStatusGrpcResponse {
  string id = 1;
  string connector_id = 2;
  google.protobuf.StringValue current_status = 3;
  google.protobuf.Timestamp status_updated_timestamp = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.StringValue error_code = 7;
  google.protobuf.StringValue info = 8;
  google.protobuf.StringValue vendor_error_code = 9;
  google.protobuf.StringValue vendor_id = 10;
}
